--- a/style.css
+++ b/style.css
@@ -100,7 +100,6 @@ h3{
 h4{
     position: relative;
     z-index: 2;
-    margin-top: -2.3rem;
 
     font-family: 'Arial';
     font-style: normal;
@@ -243,6 +242,46 @@ h4{
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-clip: text;
+    }
+}
+
+@media screen and (max-width: 375px){
+    .main-img{
+        width: 30rem;
+        height: 30rem;
+    
+        margin-top: -5rem;
+    }
+    
+    .main-img img{
+        width: 30rem;
+        height: 30rem;
+    }
+    
+    h3{
+        margin-top: 0.7rem;
+        font-size: 5rem;
+    }
+    
+    h4{
+        margin-top: -0.3rem;
+        font-size: 2rem;
+        -webkit-text-stroke: 0.17rem transparent;
+    }
+
+    .main-social{
+        margin-top: 1.8rem;
+    }
+    .main-social div{
+        padding: 0.8rem 2.2rem;
+        width: 25rem;
+    }
+    .main-social div:not(:last-child){
+        margin-bottom: 1.5rem;
+    }
+
+    .main-social div a{
+        font-size: 1.6rem;
     }
 }
 
